class & alignment correction

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ header css start
    background-color: #2D25A0;
    padding-top: 36px;
 }
-
 .menu{
     display: flex;
     flex-direction: row;
@@ -25,7 +24,6 @@ header css start
     padding-left: 156px;
 
 }
-
 .menu a{
     color: #FFFFFF;
     text-decoration: none;
@@ -33,30 +31,28 @@ header css start
  
     
 }
-
-.menu button{
+.loginbutton button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     color: white;
     background-color: #E02C6D;
     height: 44px;
-    width: 123px;    
-    top: 0px;
+    width: 123px;      
     border: none;
-    border-radius: 0px;
     cursor: pointer;
  }
-
- .menu button i{
-     padding-right: 6px;
- }
-
  .loginbutton{
      padding-left: 450px;
      }
-
+.loginbutton img{
+    height: 24px;
+    width: 24px;
+}
  .menu h1{
     color: white;
  }
-
  .head-banner{
      display: flex;
      flex-direction: row;
@@ -65,17 +61,14 @@ header css start
      align-content: center;
     align-items: center;
  }
-
  .head-banner img{
      height: 438px;
      width: 556px;
  }
-
  .head-banner h1{
      color:  #FFFFFF;
      font-size: 48px;
  }
-
 .watch-btn button {
      color:#FFFFFF;
     background-color: #E02C6D;
@@ -84,7 +77,6 @@ header css start
     width: 168px;  
     cursor: pointer;  
  }
-
  .watch-btn i{
      padding-left: 12px;
  }
@@ -92,9 +84,9 @@ header css start
  header css end 
  --------------- */
 
- /*-------------
-  main css start
-  --------------- */
+ /*----------------------
+ player-details css start
+  ----------------------- */
   .players{
       margin: 70px 180px 0px 180px;
       display: grid;
@@ -112,24 +104,27 @@ article{
     height: 256px;
     width: 300px;
 }
-.player-details h3{   
+.player-details a{
+    text-decoration: none;
+    color: #18191F;
+
+}
+.player-details h2{   
 font-size: 28px;
-font-style: normal;
 font-weight: 700;
-line-height: 40px;
+line-height: 30px;
 text-align: left;
 }
 .player-details p{ 
 font-size: 16px;
-font-style: normal;
 font-weight: 400;
 line-height: 26px;
 text-align: left;
 color: #6C6C6C;
 }
-/* -----------------
-main css end 
------------------ */
+/* ---------------------
+player-details css end 
+----------------- ------*/
 
 /* ------------------
 highlights css start
@@ -227,7 +222,8 @@ subscribe css start
     line-height: 2;
   }
   .subscribe input[type=text]:focus{
-      border:3px solid  #E02C6D;
+      border:2.5px solid  #E02C6D;
+      box-shadow: #e02c6e71 0px 7px 29px 0px;
   }
 
    form .subscribe-btn {
@@ -273,3 +269,6 @@ footer css start
     font-size: 18px;
     line-height: 24px;
 }
+/* ---------------------
+footer css end 
+---------------------  */
